--- a/views/user_admin/register-form.tt
+++ b/views/user_admin/register-form.tt
@@ -1,92 +1,34 @@
-<HTML>
-  <HEAD>
-    <TITLE>Register</TITLE>
-  </HEAD>
-  <BODY>
-    <H2>Register yourself as a user of this site</H2>
+    <h2>Register yourself as a user of this site</h2>
 
-    <FORM METHOD='post' ACTION='/user/register'>
-      <TABLE CELLPADDING=4>
+    <form method='post' action='/user/register'>
 
-        <TR>
-          <TD ALIGN='right'>
-            Email address
-          </TD>
-          <TD>
-            <INPUT TYPE='text' NAME='email'>
-          </TD>
-        </TR>
+      <label for='email'>Email address</label>
+      <input type='text' name='email'>
+      <br />
+      
+      <label for='email_confirm'>Confirm email address</label>
+      <input type='text' name='email_confirm'>
+      <br />
+      
+      <label for='first_name'>First name</label>
+      <input type='text' name='first_name'>
+      <br />
 
-        <TR>
-          <TD ALIGN='right'>
-            Confirm email address
-          </TD>
-          <TD>
-            <INPUT TYPE='text' NAME='email_confirm'>
-          </TD>
-        </TR>
+      <label for='last_name'>Last name</label>
+      <input type='text' name='last_name'>
+      <br />
 
-        <TR>
-          <TD ALIGN='right'>
-            First name
-          </TD>
-          <TD>
-            <INPUT TYPE='text' NAME='first_name'>
-          </TD>
-        </TR>
+      <label for='password'>Password</label>
+      <input type='password' name='password'>
+      <br />
 
-        <TR>
-          <TD ALIGN='right'>
-            Last name
-          </TD>
-          <TD>
-            <INPUT TYPE='text' NAME='last_name'>
-          </TD>
-        </TR>
+      <label for='password_confirm'>Confirm password</label>
+      <input type='password' NAME='password_confirm'>
+      <br />
 
-        <TR>
-          <TD ALIGN='right'>
-            Password
-          </TD>
-          <TD>
-            <INPUT TYPE='password' NAME='password'>
-          </TD>
-        </TR>
+      [%- IF return_url -%]
+        <input type="hidden" name="return_url" value="[% return_url %]">
+      [%- END -%]
 
-        <TR>
-          <TD ALIGN='right'>
-            Confirm password
-          </TD>
-          <TD>
-            <INPUT TYPE='password' NAME='password_confirm'>
-          </TD>
-        </TR>
-
-        <TR>
-          <TD ALIGN='right'>
-            Email address
-          </TD>
-          <TD>
-            <INPUT TYPE='text' NAME='email'>
-          </TD>
-        </TR>
-
-        <TR>
-          <TD ALIGN='right'>
-            Email address
-          </TD>
-          <TD>
-            <INPUT TYPE='text' NAME='email'>
-          </TD>
-        </TR>
-
-        <TR>
-          <TD COLSPAN=2>
-            <INPUT TYPE='submit'>
-          </TD>
-        </TR>
-      </TABLE>
+      <INPUT TYPE='submit' value='Register'>
     </FORM>
-
-  </BODY>
-<HTML>
